@@ -446,6 +446,11 @@ void img_free_allocated_memory(img_window_struct *img_struct)
 		g_free(img_struct->project_filename);
 		img_struct->project_filename = NULL;
 	}
+	if (img_struct->first_selected_path)
+	{
+		gtk_tree_path_free(img_struct->first_selected_path);
+		img_struct->first_selected_path = NULL;
+	}
 }
 
 gint img_ask_user_confirmation(img_window_struct *img_struct, gchar *msg)
@@ -804,14 +809,14 @@ void img_show_about_dialog (GtkMenuItem *item,img_window_struct *img_struct)
 		g_object_set (about,
 			"name", "Imagination",
 			"version", strcmp(REVISION, "-1") == 0 ? VERSION : version,
-			"copyright","Copyright \xC2\xA9 2009 Giuseppe Torelli",
+			"copyright","Copyright \xC2\xA9 2009-2018 Giuseppe Torelli",
 			"comments","A simple and lightweight DVD slideshow maker",
 			"authors",authors,
 			"documenters",NULL,
 			"translator_credits",_("translator-credits"),
 			"logo_icon_name","imagination",
 			"website","http://imagination.sf.net",
-			"license","Copyright \xC2\xA9 2009 Giuseppe Torelli - Colossus <colossus73@gmail.com>\n\n"
+			"license","Copyright \xC2\xA9 2009-2018 Giuseppe Torelli - Colossus <colossus73@gmail.com>\n\n"
 		    			"This is free software; you can redistribute it and/or\n"
     					"modify it under the terms of the GNU Library General Public License as\n"
     					"published by the Free Software Foundation; either version 2 of the\n"
